my 2nd commit test

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Table of Contents</title>
+        <title>Table of Content</title>
 
 
     </head>
